# etdevs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_check.yml
docs/: cli-etdevs-query.rst  conf.py  device-yaml.rst  enabling-switches.rst  index.rst  installation.rst  motivation.rst  python-library.rst  requirements.rst  requirements.txt
scripts/: install_uhubctl.sh
src/etdevs/: __init__.py  devs.py  devs_query.py
tests/: test_devs.py  test_devs_query.py  test_uhubctl.py
